bump z-index on auxillary nav (bug 752876)

--- a/media/css/devreg/header.less
+++ b/media/css/devreg/header.less
@@ -7,7 +7,7 @@
     .upper-header {
         padding: 0 0 7px;
         position: relative;
-        z-index: 2;
+        z-index: 1006;
     }
     .menu-nav {
         position: relative;
